# CPLamP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cursor/agents/: plan-analyst.md  scope-enforcer.md  task-decomposer.md
.cursor/commands/: evaluate-output.md  next-step.md  start-overseer.md
.cursor/rules/: You-are-the-overseer-of-this-project-You-don-t-write-code-you-tell-the-user-what-to-do-and-why.mdc  basic.mdc  process.mdc  prompt-length.mdc  step-step.mdc  step-summary.mdc  steps-project.mdc
.cursor/skills/output-evaluator/: SKILL.md
.cursor/skills/project-reader/: SKILL.md
.cursor/skills/step-planner/: SKILL.md
cmake/: CPLamPConfig.cmake.in  Sanitize.cmake  Warnings.cmake
docs/: implementation_plan.md
include/cplamp/: ai.h
src/ai/: dummy.cc
tests/: test_dummy.cpp
